@startuml
' Domain Model DDD for the Commerce Prototype

entity ProductLocation {
  + Id: string
  + Name: string
  + Quantity: int
  + ShelfTier: int
  + ShelfId: string
}

entity Shelf {
    + Id: string
    + StoreId: string
    + ZoneId: string
    + LevelsNumber: int
    + Height: double
    + Width: double
    + X: double
    + Y: double
}

entity Zone {
  + Id: string
  + Name: string
  + StoreId: string
  + Height: double
  + Width: double
  + UpdatedAt: DateTime
  + X: double
  + Y: double
  + UnityMeasure: string
}

entity Address{
  + Id: string
  + Street: string
  + City: string
  + ZipCode: string
  + Country: string
}

entity Store {
  + Id: string
  + Name: string
  + AddressId: string
  + UpdatedAt: DateTime
  + Width: double
  + Height: double
  + OpeningHours: string
  + Status: string
  + UnityMeasure: string
}

' Relationships
Store }o--|| Address : AddressId
Store ||--o{ Zone : StoreId
Zone ||--o{ Shelf : ZoneId
Shelf ||--o{ ProductLocation : ShelfId

@enduml
